--- a/README.Rmd
+++ b/README.Rmd
@@ -14,6 +14,8 @@ knitr::opts_chunk$set(echo = TRUE,
 
 Questo corso fornsice un'introduzione base a `RMarkdown` per la preparazione di documenti, siano essi tesi di laurea, report per lab meeting o presentazioni per convegni. 
 
-Prima dell'inizio del corso, è necessario scaricare e installare il software  [`R`](https://cran.r-project.org/bin/windows/base/). *Dopo* aver scaricato `R`, si può scaricare la Integrated Development Environment (IDE) di `R`, ossia [`RStudio`](https://www.rstudio.com/products/rstudio/download/). 
+Prima dell'inizio del corso, è necessario scaricare e installare il software  [`R`](https://cran.r-project.org/bin/windows/base/). *Dopo* aver scaricato `R`, si può scaricare la Integrated Development Environment (IDE) di `R`, ossia [`RStudio`](https://www.rstudio.com/products/rstudio/download/). Infine,è necesario scaricare e installare anche [`Latex`](https://miktex.org/download)
 
 A questa pagina è disponibile una prima introduzione a [`RMarkdown`](https://rmarkdown.rstudio.com/lesson-1.html). Per partecipare al corso, è necessario sapere usare `R`, almeno i suoi pacchetti base.
+
+Questo corso fa parte dei corsi ARCA (Applied Research Courses Academy). A [questa pagina](https://www.dpss.unipd.it/arca/home) è possibile ottenere infromazioni circa gli altri corsi disponibili.
